# Animation-Engine

./: Cargo.toml  Guide.md  README.md  fade-in-and-out.html  fade-script.js  index.html  script.js  styles.css
src/: animation_group.rs  choreographer.rs  cubic.rs  gesture.rs  lib.rs  metal_acceleration.rs  particle_effects.rs  sequencer.rs  shape_morphing.rs  spring.rs  transaction.rs  types.rs
tests/: web.rs
