[package]
name = "animation_engine"
version = "0.1.0"
authors = ["Roddy <124875320+RODDY064@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlElement",
    "CssStyleDeclaration",
    "Performance",
    "Element",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
lto = true