[package]
name = "animation_engine"
version = "0.1.0"
edition = "2021"
authors = ["RODDY064"]
description = "High-performance WebAssembly animation engine with cubic bezier and spring physics"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlElement",
    "Element",
    "Performance",
    "CssStyleDeclaration",
    "SvgElement",
    "Document",
    "Navigator",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true